# Shativira-Security-Framework-Windows

./: Cargo.toml
src/: lib.rs
src/analytics/: mod.rs
src/etc/: hosts.rs
src/framework/: mod.rs  winregistry.rs
src/internals/crypto/: hashes.rs  mod.rs
