[package]
name = "shativira-framework-security-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
registry = "1.2.3"
windows = "0.58.0"

libsumatracrypt-rs = { version = "0.5.0", features=["digests"] }